--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "nodemailer": "^6.9.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazyload": "^3.2.0",
+    "react-native-lazyload": "^1.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
