--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "digital-marketing-app",
   "version": "0.1.0",
   "homepage": "https://PremRathan2003.github.io/Digital-Marketing/",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
