--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "homepage": "https://PremRathan2003.github.io/Digital-Marketing/",
   "private": false,
   "dependencies": {
+    "@mui/icons-material": "^5.15.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "icons": "^1.0.0",
     "nodemailer": "^6.9.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-lazyload": "^3.2.0",
     "react-native-lazyload": "^1.1.0",
     "react-router-dom": "^5.2.0",
